package com.example.personal_budget.enums;

public enum Role {
    USER,
    ADMIN
}