@startuml User Module

package "User Module" {

    class AuthController {
        - UserService userService
        - AuthService authService

        + register(RegisterRequest request)
        + login(LoginRequest request)
    }

    class AdminController {
        - UserService userService

        + getAllUsers()
        + otherFunctions()
    }

    class AuthService {
        - AuthenticationManager authManager

        + login(String username, String password)
    }

    class RegisterRequest {
        - String username
        - String password
    }

    class LoginRequest {
        - String username
        - String password
    }

    class SecurityConfig {
        + passwordEncoder()
        + authenticationManager()
        + securityFilterChain()
    }

    class UserService {
        - UserRepository repo
        - PasswordEncoder encoder

        + register(String username, String password)
        + getAllUsers()
    }

    class AuthenticationManager {
    }

    class PasswordEncoder {
    }

    class CustomUserDetailsService {
        - UserRepository repo

        + loadUserByUsername(String username)
    }

    class CustomUserDetails {
        - String username
        - String password
        - Role role
    }

    class UserRepository {
        + findByUserName(String username)
        + save(User user)
    }

    class User {
        - int id
        - String username
        - String password
        - Role role
    }

    interface UserDetails {
    }

    enum Role {
        USER
        ADMIN
    }

    ' Relationships
    AuthController --> AuthService
    AuthController --> RegisterRequest
    AuthController --> LoginRequest
    AuthController --> UserService

    AdminController --> UserService

    AuthService --> AuthenticationManager

    SecurityConfig --> AuthenticationManager
    SecurityConfig --> PasswordEncoder

    UserService --> PasswordEncoder
    UserService --> UserRepository

    AuthenticationManager --> CustomUserDetailsService
    CustomUserDetailsService --> CustomUserDetails
    CustomUserDetailsService --> UserRepository

    CustomUserDetails --> Role
    CustomUserDetails ..|> UserDetails : implements

    UserRepository --> User

    note left of AuthController
        Login flow:
        AuthController → AuthService → AuthenticationManager → CustomUserDetailsService → UserRepository
    end note

    note right of AuthController
        Register flow:
        AuthController → UserService → UserRepository → DB
    end note
}

' =========================
' CROSS-MODULE RELATIONS
' =========================

@enduml